Fri Mar 24 10:30:44 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/LSOCK.cpp (recv_handle): For some reason, Linux allocates an extra
	  handle when doing a recvmsg() with the MSG_PEEK flag set.
  	  Therefore, we need to close this.  Thanks to Rick Ohnemus
 	  <rjohnemus@systemware-inc.com> for reporting this.  Fixed [BUGID
 	  511].

	* examples/IPC_SAP/FILE_SAP/client.cpp. Fixed the formatting
	  to conform to ACE guidelines.  Thanks to Steve Luoma
 	  <stevel@dvc400.com> for motivating this.

Thu Mar 23 20:37:19 2000  David L. Levine  <levine@cs.wustl.edu>

        * bin/check_build_logs: removed leading "./" from log file names.

Thu Mar 23 17:38:34 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

        * ace/MEM_SAP.cpp: Removed a redundant "defined".  Thanks to David
          Wicks <swicks@continuum-corp.com> for noticing this.

Thu Mar 23 15:26:52 2000  Carlos O'Ryan  <coryan@uci.edu>

        * PROBLEM-REPORT-FORM:
          Modified the text to encourage users to report real bugs to
          Bugzilla, that way we don't have to enter them ourselves.  Only
          dubious stuff should be reported to the mailing list.

Thu Mar 23 14:34:26 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

        * ace/*.h: Moved the inclusion of <pre.h> down after the
          definition of header guard macro.  The original order violated
          the ACE programming guideline.  Thanks to Carlos for catching
          this.

Wed Mar 23 15:10:01 2000  Chad Elliott  <elliott_c@ociweb.com>

        * tests/run_tests.sh
          Fixed my fix for Chorus.  It, again, supports FOR_TAO subset.

Thu Mar 23 15:09:22 2000  Jody Hagins <jody@atdesk.com>

        * ace/Object_Manager.cpp (ACE_Static_Object_Lock::instance):
          with ACE_SHOULD_MALLOC_STATIC_OBJECT_LOCK #defined,
          use ACE_RETURN_NEW instead of ACE_RETURN so that a value
          is returned by the function.

Thu Mar 23 10:39:23 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/g++dep: