@@ -1,3 +1,9 @@
+Mon Mar 27 09:11:11 2000  Carlos O'Ryan  <coryan@uci.edu>
+
+	* tests/Reactor_Timer_Test.cpp:
+	  Change the test to use a non-singleton reactor, with this change
+	  it failts under NT.
+
 Fri Mar 24 10:30:44 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
 
 	* ace/LSOCK.cpp (recv_handle): For some reason, Linux allocates an extra
